apps/base/pgadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  labels:
    homelab.io/app: "true"
    homelab.io/needs-database: "true"
