apps/base/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: pgadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pgadmin4
